new changes made

--- a/Audify/new_venv/pyvenv.cfg
+++ b/Audify/new_venv/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /opt/homebrew/opt/python@3.10/bin
+home = /Users/ayeshasiddiqui/Downloads/ffmpeg/new_venv/bin
 include-system-site-packages = false
 version = 3.10.15
